# VeraTest

./: .env.example  .gitignore  .mcp.json  BUSINESS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  JUNIOR_TASKS.md  LICENSE  README.md  SECURITY.md  TESTING.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: HACKATHON_COMPLIANCE.md  agent-builder.md  architecture.md  resonance-redesign.md  tier3-arcade-theater-brief.md  video-script.md
frontend/: .gcloudignore  Dockerfile  cloudbuild.yaml  next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/lib/: audiencePresets.ts
gcp/: cloudrun.yaml  deploy.sh
google-cloud-sdk/: .firebaserc  app.tsx  firebase.ts  index.tsx  package-lock.json
mcp/: phoenix-mcp.example.json  pyproject.toml
mcp-apollo-lambda/: CLAUDE.md  Dockerfile  app.py
mcp/simab_mcp/: __init__.py  server.py
scripts/: deploy_agent_engine.py  dev.sh  run_calibration_experiment.py
simab/: __init__.py  agent.py  agent_runtime.py  config.py  exports.py  llm.py  main.py  models.py  pipeline.py  ratelimit.py  state.py
simab/agents/: __init__.py  auditor.py  fidelity.py  narrative.py  normalizer.py  scenarios.py  simulator.py  synthesizer.py
simab/integrations/: __init__.py  ga4.py  phoenix.py  phoenix_client.py  session.py  (+1 more)
tests/: conftest.py  test_agent.py  test_agent_endpoints.py  test_calibration.py  test_exports.py  test_fidelity.py  test_observability.py  test_ratelimit.py  test_smoke.py  test_visual_evaluation.py
validation/: README.md  dataset.csv  dataset_balanced.csv  make_balanced.py  phoenix_env.sh  report_20260525_000552.md  report_20260608_152937.md  report_20260610_180453.md  report_20260610_181334.md  report_20260610_193043.md  report_20260611_073526.md  report_20260611_143950.md  run.py
(+30 files in other folders)
