[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "simab"
version = "0.1.0"
description = "Synthetic UX pretest engine — free, self-hostable, MCP-native"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "google-genai>=0.3.0",
    "google-analytics-data>=0.18",
    "google-auth-oauthlib>=1.2",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "python-multipart>=0.0.9",
    "pillow>=10.0",
    "tenacity>=8.5",
    "sse-starlette>=2.1",
    # Optional: arize-phoenix-otel for self-hosted observability
    # Install separately: pip install arize-phoenix arize-phoenix-otel
]

[project.optional-dependencies]
phoenix = [
    "arize-phoenix>=4.0",
    "arize-phoenix-otel>=0.5",
    "arize-phoenix-evals>=0.13",
    "arize-phoenix-client>=1.0",
    "openinference-instrumentation>=0.1",
    "openinference-instrumentation-google-genai>=0.1",
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "anyio>=4.0", "pandas>=2.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["simab*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
